# mn-uncensored

./: .dockerignore  .gitignore  CHANGELOG.md  CNAME  LICENSE  NOTICE.md  README.md  RELEASE_NOTES.md  SECURITY.md  app.js  auth.md  deployment.env.example  index.html  index.md  llms-full.txt  llms.txt  manifest.webmanifest  modal_gateway.py  modal_vllm.py  openapi.json  package-lock.json  package.json  pyproject.toml  robots.txt  run-pi.sh  sitemap.xml  styles.css  test_endpoint.py  website-worker.mjs  wrangler.jsonc
.github/workflows/: pages.yml
.well-known/: agent-card.json  oauth-authorization-server  oauth-protected-resource  openid-configuration  security.txt  skills.json  webmcp.json
.well-known/agent-skills/: index.json
assets/: hero-brain.avif
blog/: feed.xml  index.html
config/: mn.json
docs/: INCIDENT-2026-07-16-MODAL-COST.md  MODELS.md  OPERATIONS.md  RELEASE_NOTES.md  SOLUTIONS_define_the_physical_gpu_o.md
releases/: website-v0.1.0.md  website-v0.2.0.md  website-v0.5.1.md  website-v0.6.0.md  website-v0.8.0.md  website-v0.8.1.md
scripts/: check-secrets.sh  deploy-release.sh  deploy-website.sh  extract-release-notes.py  install-macos.sh  smoke-catalog.py  sync-modal-secret.sh  verify-agent-ready.mjs
tests/: test_cli.py  test_gateway.py  test_release_notes.py  test_security.py  test_settings.py  test_vllm.py  test_website.py
website/: 404.html  CNAME  README.md  RELEASE_NOTES.md  app.js  auth.md  humans.txt  index.html  index.md  llms-full.txt  llms.txt  manifest.webmanifest  openapi.json  robots.txt  sitemap.xml  styles.css
(+33 files in other folders)
