[project]
name = "mn-uncensored"
version = "0.1.0"
description = "Minimal start/stop CLI and OpenAI-compatible gateway for MN Uncensored"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.128,<0.129",
  "httpx>=0.28,<1",
  "modal>=1.0,<2",
  "openai>=2,<3",
]

[project.scripts]
mn = "mn_uncensored.cli:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mn_uncensored"]

[tool.pytest.ini_options]
testpaths = ["tests"]
